Fix mobile overflow

--- a/public/index.css
+++ b/public/index.css
@@ -23,6 +23,11 @@ img{
   box-shadow: #888 0 0 8px;
 }
 
+.workspace {
+  width: 100vw;
+  overflow: scroll;
+}
+
 .tile {
   user-select: none;
 }
@@ -89,7 +94,7 @@ img{
   display: none;
 }
 
-.AnnotationCanvas {
+.annotation {
   cursor: url(assets/brushCursor.png) 3 29, crosshair;
 }
 
@@ -100,12 +105,6 @@ img{
   position: absolute;
   top: 100%;
  }
-
-.navbar {
-  position: fixed;
-  width: 100vw;
-  z-index: 1000;
-}
 
 .box{
   width:50px;
